--- a/styles/main.scss
+++ b/styles/main.scss
@@ -23,20 +23,17 @@ body{
     justify-content: center;
     color: $color-second;
 
-    // .reg-popup{
-    //     width: 15em;
-    //     height: 8em;
-    //     background-color: #ccc;
-    //     display: auto;
-    //     position: absolute;
-    // }
-    .hidden{
-        display: none;
-    }
-
     &__form{
         display: grid;
         font-size: 16px;
+
+        .reg-popup{
+            color: rgba(250, 30, 30, .7);
+            max-width: 15em;
+            font-size: 14px;
+            padding-bottom: .2em;
+            font-family: Arial, Helvetica, sans-serif
+        }
 
         &--input{
             font-size: 1.2em;
@@ -45,11 +42,13 @@ body{
             margin-bottom: .5em;
             padding: .8em;
             text-align: center;
-            text-transform: capitalize;
             background-color: $color-primary;
             border: 2px solid $color-second;
             border-radius: 1em;
             color: $color-second;
+        }
+        &--name, &--lastname{
+            text-transform: capitalize;
         }
         &>:nth-child(odd){
             font-size: 1.2em;
@@ -61,8 +60,12 @@ body{
             margin-top: 2em;
             height: 2.5em;
             background-color: $color-second;
+            border: 0;
+            outline: 0;
             border-radius: 1em;
             color: $color-primary;
+            cursor: pointer;
+
             font-weight: bold;
             text-transform: uppercase;
             font-size: 1.5em;
